# django-suc

./: .gitignore  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
django_suc/: __init__.py  suc.py
tests/: settings.py  test_suc.py
tests/testapp/: apps.py  models.py
