[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-suc"
version = "0.0.4"
authors = [
    {name = "Yun Chin", email = "razzzer@gmail.com"},
]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
description = "Module for auto-naming unique constraint."
dependencies = [
    "django",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
django_find_project = false
pythonpath = ". django_suc"
# filterwarnings = "ignore::django.utils.deprecation.RemovedInDjango50Warning"
filterwarnings = "ignore::DeprecationWarning"
